# ree-save-editor

./: .gitattributes  .gitignore  .gitmodules  .luarc.json  Cargo.toml  EnemyReportBossData.user.3  README.md  TODO.md  ]  build.rs  index.html  log.txt  mesh_st101_a01_00.mesh.241111606  mesh_st101_a01_01.mesh.241111606  mhtame-gui-1c2200cac1438ec9.js  mhtame-gui-2af0e7256504466b.js  mhtame-gui-31b2132f4826b8d0.js  mhtame-gui-409899d0b1d9206b.js  mhtame-gui-46e5165ac178737b.js  mhtame-gui-595b79c7ec97acd0.js  mhtame-gui-68817bb07f196b30.js  mhtame-gui-73f1f95f3f02fcb3.js  mhtame-gui-80ff4a8015bd2148.js  mhtame-gui-8dc7c4e1e6f4c5c2.js  mhtame-gui-9065fbd733b3f023.js  mhtame-gui-a9973a693b793924.js  mhtame-gui-b495c443d8bc43b0.js  mhtame-gui-e36e9d87fc7e5a63.js  mhtame-gui-e4c678f83ed57406.js  mhtame-gui-eb34e501290b1f6d.js  mhtame-gui-ecb9934e0b46455b.js  mhtame-gui-ee3d166230b092b1.js  out.txt  ree-save-editor-65a39210447de6ce.js  ree-save-editor-a54f96cadd502caf.js  ree-save-editor-c2df829bf3340376.js  test.lst
.github/: deploy.yml
.github/workflows/: deploy.yml
assets/: enum_text_mappings.json  mappings.txt  mhst3_remap.json  wilds_remap.json
assets/dd2/: enumsdd2.json
assets/mhrise/: enumsmhrise.json
assets/mhst3/: mhst3_enums.json  mhst3_remap.json
assets/mhwilds/: combined_msgs.json  enums_mappings_mhwilds.json  enumsmhwilds.json  remapmhwilds.json  rszmhwilds.json  rszmhwilds_packed.json
assets/pragmata/: enumspragmata.json
assets/re2/: enumsre2.json  rszre2.json
assets/re3/: rszre3.json
assets/re4/: enumsre4.json  rszre4.json
assets/re7/: enumsre7.json  rszre7.json
assets/re8/: enumsre8.json  rszre8.json
assets/re9/: enums_re9.json  remap.json  rszre9.json  rszre9_parent.json  static_hashes.json
assets/sf6/: rszsf6.json
docs/: USAGE.md  doc.json  doc.md
file_macros/: Cargo.toml
file_macros/src/: lib.rs
gui/: Cargo.toml  index.html
gui/src/: app.rs  code_editor.rs  file.rs  game_context.rs  lib.rs  main.rs  steam.rs  tab.rs  viewer.rs
natives/STM/GameDesign/Common/Enemy/: EnemyData.user.3.json  EnemyReportBossData.user.3.json
rev/: FindDllImportExport.java  astamp_rise_notes.txt  blowfish.py  compression.py  experiments.txt  mandarin.py  mandarin2.py  pog.bt  resave.bt  rise_save.py  rise_save_notes.txt  save.cpp  scan_blowfish.py  wilds.genny
rsz_macros/: Cargo.toml
rsz_macros/src/: lib.rs
save/: save  save.cpp
scripts/: build_release.sh  combine_msgs.py  enum_hints.py  filter-files.sh  find_all_murmur3.py  find_em_enums.py  find_mandarin_const.py  fix_corrupt_user_save.lua  fix_user_read_with_rsz.lua  fix_user_with_scan.lua  foo.lua  getstringsfromjson.py  load_saves.lua  re9_data.py  re9_parse_il2cpp_hashes.py  reset_tickets.lua
sdk/: Cargo.toml
sdk/src/: deserializer.rs  json_serializer.rs  lib.rs  rsz.rs  type_map.rs  types.rs  value.rs
src/: align.rs  byte_reader.rs  compression.rs  crypt.rs  dersz.rs  edit.rs  file.rs  file_ext.rs  font.rs  game_context.rs  gen.rs  gensdk.rs  lib.rs  main.rs  mesh.rs  msg.rs  pog.rs  reerr.rs  rsz.rs  rsz_files.rs  save.rs  scn.rs  tdb.rs  tex.rs  user.rs  util.rs
src/bindings/: mod.rs  runner.rs  save.rs
src/edit/: copy.rs  mod.rs  types.rs
src/file/: font.rs  mesh.rs  mod.rs  msg.rs  pog.rs  scn.rs  tex.rs  user.rs
src/gui/: editor.rs  main.rs
src/rsz/: dump.rs  mod.rs  object.rs  rszserde.rs
src/save/: corrupt.rs  crypt.rs  error.rs  game.rs  mod.rs  remap.rs  types.rs
src/save/crypto/: blowfish.rs  citrus.rs  lime.rs  mandarin.rs  mod.rs  util.rs
src/sdk/: asset.rs  deserializer.rs  json_serializer.rs  mod.rs  rsz.rs  type_map.rs  types.rs  value.rs
typings/: api.lua
util/: Cargo.toml
util/src/: lib.rs  read_ext.rs  seek_ext.rs
