[package]
name = "mhtame"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".", "file_macros", "rsz_macros"
]

[features]
default = []
save = []

[dependencies]
rsz_macros = { path = "./rsz_macros" }
file_macros = { path = "./file_macros" }
byteorder = "1.5.0"
clap = { version = "4.5.20", features = ["derive"] }
image = "0.25.5"
once_cell = "1.5"
serde = { version = "1.0", features = ["rc"] }
serde_derive = { version =">=1.0.188"}
serde_json = {version = "1.0", features = ["preserve_order"]}
bitflags = "2"
nalgebra-glm = { version = "0.19", features = ["serde-serialize"]}
nalgebra = "*"
uuid = "1.11.0"
indexmap = { version = "2.7.0", features = ["serde"] }
quote = "1.0.40"
syn = "2.0.100"
proc-macro2 = "1.0.94"
log = "0.4.27"
env_logger = "0.11.8"
libdeflater = {git = "https://github.com/c-ola/libdeflater.git", branch = "master" }
#libdeflater = {path = "../libdeflater/"}
num_enum = "0.7.4"
hex-literal = "1.0.0"
bytemuck = {version = "1.24.0", features = ["derive"]}
bytemuck_derive = "1.10.2"
aes = "0.8.4"
fasthash = "0.4.0"
ofb = "0.6.1"
rayon = "1.11.0"
bitfield = "0.19.3"
num-bigint = "0.4.6"
rug = "1.28.0"
