[package]
name = "mhtame"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".", "file_macros", "rsz_macros" , "util", "gui"
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
tex = ["dep:libdeflater"]
tdb = []
edit = []
save = []

[dependencies]
util = { path = "./util" }
rsz_macros = { path = "./rsz_macros" }
file_macros = { path = "./file_macros" }
clap = { version = "4.5.20", features = ["derive"] }
image = "0.25.5"
once_cell = "1.5"
log = "0.4.27"
env_logger = "0.11.8"
zstd = "0.13.3"
lz4_flex = "0.12.0"

# serializing/deserializing
serde = { version = "1.0", features = ["rc", "derive"] }
serde_derive = { version =">=1.0.188"}
serde_json = {version = "1.0", features = ["preserve_order"]}
simd-json = "0.17.0"

bitflags = "2"
nalgebra-glm = { version = "0.20", features = ["serde-serialize"]}
nalgebra = "*"
uuid = "1.11.0"
indexmap = { version = "2.7.0", features = ["serde"] }
bitcode = { version = "0.6.7", features = ["serde"] }
bytemuck = {version = "1.24.0", features = ["derive"]}
bytemuck_derive = "1.10.2"

# codegen
quote = "1.0.40"
syn = "2.0.100"
proc-macro2 = "1.0.94"
num_enum = "0.7.4"
hex-literal = "1.0.0"

aes = "0.8.4"
ofb = "0.6.1"
rayon = "1.11.0"
bitfield = "0.19.3"

eframe = "0.33.0"
half = { version = "2.7.1", features = ["serde"] }
flate2 = {version = "1.1.5", features = ["rust_backend"], default-features = false}
cityhasher = "0.1.0"
murmur3 = "0.5.2"


libdeflater = {git = "https://github.com/c-ola/libdeflater.git", branch = "master", features=["freestanding"], optional=true}
dotenvy = "0.15.7"
keyvalues-serde = "0.2.3"
keyvalues-parser = "0.2.2"
mlua = {version = "0.11.5", features = ["lua54", "vendored", "async", "send"] }
rfd = "0.17.2"
shellexpand = "3.1.1"
#libdeflater = {path = "../libdeflater/", features = ["freestanding"] }


[target.'cfg(target_os = "linux")'.dependencies]
rug = "1.28.0"

[target.'cfg(target_os = "windows")'.dependencies]
num-bigint = "0.4.6"
num-traits = "0.2"
num-integer = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
num-bigint = "0.4.6"
num-traits = "0.2"
num-integer = "0.1"

[build-dependencies]
serde = { version = "1.0", features = ["rc", "derive"] }
simd-json = "0.17.0"
serde_json = {version = "1.0", features = ["preserve_order"]}
bitcode = { version = "0.6.7", features = ["serde"] }
indexmap = { version = "2.7.0", features = ["serde"] }
zstd = "0.13.3"
