[package]
name = "sdk"
version = "0.1.0"
edition = "2024"

[lib]
name = "sdk"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
util = {path = "../util/"}
serde = { version = "1.0", features = ["rc", "derive"] }
serde_derive = { version =">=1.0.188"}
serde_json = {version = "1.0", features = ["preserve_order"]}
simd-json = "0.17.0"
bitcode = { version = "0.6.7", features = ["serde"] }
#bincode = {version = "2.0.1", features = ["serde"]}
indexmap = { version = "2.7.0", features = ["serde"] }
murmur3 = "0.5.2"
lz4_flex = "0.12.0"
zstd = "0.13.3"
half = { version = "2.7.1", features = ["serde"] }
uuid = "1.19.0"
log = "0.4.29"
env_logger = "0.11.8"
